@@ -1,4 +1,5 @@
 {{$NEXT}}
+          Add an "unshorten" alias to "increase".
 
 v1.1.0    2012-11-05 13:22:09 UTC
           Minor test fixes.
